--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ if (!doNotTrack) {
           </h1>
           <h5 class="text-muted pro-text" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50"
             data-aos-duration="900" data-aos-once="true">
-            Engineer
+            Data Engineer
           </h5>
         </div>
         <div class="row social pt-4" data-aos="fade-up" data-aos-offset="50" data-aos-delay="50" data-aos-duration="900"
