--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@ if (!doNotTrack) {
           <div class="col-md-6 content-pro p-3 bg-light">
             <div class="content-pro-top">
               <h2>Image classifier</h2>
-              <p class="card-text pt-2">Build a classifier model to distinguish between fields and roads. Use the both ML frameworks TensorFlow and Pytorch. Try self made CNN model and predefined VGG19 model. Use Date generator to improve train quality.</p>
+              <p class="card-text pt-2">Build a classifier model to distinguish between fields and roads. Use the both ML frameworks TensorFlow and Pytorch. Try self made CNN model and predefined VGG19 model. Use Data generator to improve train quality.</p>
             </div>
             <span class="float-right">
                
