--- a/404.html
+++ b/404.html
@@ -231,10 +231,7 @@ if (!doNotTrack) {
         </div>
         &copy; 2021 All Rights Reserved
         <div>
-          Made with &#10084; and
-          <a href="https://github.com/gurusabarish/hugo-profile" target="_blank">Hugo profile</a>
-          | Designed and Developed by
-          <a href="https://gurusabarish.tech" target="_blank">Gurusabarish</a>
+          Made with &#10084 
         </div>
       </div>
     </div>
