--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@ if (!doNotTrack) {
           <a class="nav-link text-dark" href="./#contact" aria-label="contact">Contact</a>
         </li>
         
+        <li class="nav-item navbar-text">
+          <a class="nav-link text-dark" href="./resume" aria-label="resume">Resume</a>
+        </li>        
 
         
         <li class="nav-item navbar-text">
