--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ if (!doNotTrack) {
         </li>
         
         <li class="nav-item navbar-text">
-          <a class="nav-link text-dark" href="./resume" aria-label="resume">Resume</a>
+          <a class="nav-link text-dark" href="./files/resume.pdf" aria-label="resume">Resume</a>
         </li>        
 
         
