--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ if (!doNotTrack) {
             </div>
             
             <div>
-              <div>VBA</div>
+              <div>Shiny</div>
               <div class="progress mb-4">
                 <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuemin="0"
                   aria-valuemax="100"></div>
@@ -269,6 +269,14 @@ if (!doNotTrack) {
               </div>
             </div>
             
+            <div>
+              <div>VBA</div>
+              <div class="progress mb-4">
+                <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuemin="0"
+                  aria-valuemax="100"></div>
+              </div>
+            </div>
+
             <div>
               <div>OpenAI</div>
               <div class="progress mb-4">
