update files names

--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@ if (!doNotTrack) {
       <div class="col-md-8 pro m-3 shadow" data-aos="fade-up" data-aos-duration="1500" data-aos-once="true">
         <div class="row">
           <div class="col-md-6 bg-pro">
-            <img src="./img/calculate%20water%20values.gif" alt="Water values for Antares" />
+            <img src="./img/calculate_water_values.gif" alt="Water values for Antares" />
           </div>
           <div class="col-md-6 content-pro p-3 bg-light">
             <div class="content-pro-top">
@@ -1020,7 +1020,7 @@ if (!doNotTrack) {
 
       <div class="col-md-5 achiv-out px-4 px-md-2 my-2" data-aos="fade-up" data-aos-easing="linear"
         data-aos-duration="600" data-aos-once="true">
-        <div class="achiv-card d-flex align-items-end shadow-lg rounded" style="background-image: url(.//img/Supervised%20Machine%20Learning:%20Regression.jpg);">
+        <div class="achiv-card d-flex align-items-end shadow-lg rounded" style="background-image: url(.//img/Supervised_Machine_Learning_Regression.jpg);">
           <div class="p-3 w-100 achiv overflow-hidden">
             <h4 class="text-center achiv-head">Supervised Machine Learning: Regression</h4>
             <div class="text-secondary">Supervised Machine Learning: Regression IBM certificate.</div>
