--- a/public/assets/resume.html
+++ b/public/assets/resume.html
@@ -119,7 +119,7 @@
 
     <div class="section">
         <div class="section-title">Summary</div>
-        <p>A Solution Architect passionate about Cloud Computing and Blockchain Technology. I like automating things, building pipelines, exploring scalability problems and improving efficiency and performance.</p>
+        <p>Distributed Platform Architect with 3 years of experience, combining architectural design with hands-on implementation. Architect and develop cloud-native solutions including microservices, Kubernetes infrastructure, and distributed data processing platforms. Specialized in building real-time data pipelines using Apache Spark, Delta Lake, and event streaming with Apache Kafka. Design and implement blockchain protocols and cross-chain bridges. Strong focus on end-to-end delivery, from system design to production deployment, with expertise in infrastructure automation and observability. Active contributor to open-source projects in data engineering and system integration.</p>
     </div>
 
     <div class="section">
@@ -129,13 +129,16 @@
             <div class="job-title">Solution Architect</div>
             <div class="company-info">Skilld | February 2022 - Present | Paris, France</div>
             <ul>
-                <li>Led the development and architecture of durable, scalable platforms by integrating Microservices Architecture, Domain Driven Design, and Event Driven Architecture, significantly improving system responsiveness and scalability.</li>
-                <li>Developed and maintained multiple projects using Go (Golang), Python, and Scala, incorporating SQL for database management and queries.</li>
-                <li>Engineered and deployed Spark data pipelines leveraging Apache Spark, Apache Kafka, Apache Druid, and Apache Delta Lake, achieving 80% build time optimization.</li>
-                <li>Deployed and managed Kubernetes clusters, streamlining deployment pipelines using Docker, Ansible, Git, GitHub Actions, and GitLab.</li>
-                <li>Contributed to sophisticated data storage solutions using PostgreSQL, TimescaleDB, DragonflyDB, and Trino.</li>
-                <li>Integrated monitoring tools including Grafana, Graylog, Elasticsearch, and Prometheus for system health insights.</li>
-                <li>Designed and implemented SSO architecture for platform cross applications using Ory ecosystem, ensuring secure and seamless authentication across multiple services.</li>
+                <li>Designed and developed scalable microservices using Golang, implementing domain-driven design principles.</li>
+                <li>Designed and maintained a multi-cluster Kubernetes infrastructure spanning development, staging, and production environments, implementing helm charts for automated application deployment.</li>
+                <li>Engineered a robust monitoring and observability stack using Prometheus, Grafana, and Elasticsearch, creating custom dashboards and alerts for comprehensive system monitoring.</li>
+                <li>Implemented distributed tracing system using OpenTelemetry (OTEL) for end-to-end visibility across microservices, improving troubleshooting capabilities and performance optimization.</li>
+                <li>Developed and optimized stream processing pipelines using Apache Spark and Delta Lake, achieving near real-time data processing with implemented data quality checks.</li>
+                <li>Contributed to infrastructure automation on bare metal servers using Ansible, supporting configuration and deployment of distributed applications.</li>
+                <li>Designed and deployed a scalable event-driven architecture using Apache Kafka, NATS, and Redis, enabling real-time event processing with sub-second latency.</li>
+                <li>Contributed to centralized logging architecture using Graylog and Elasticsearch with custom parsing and alerting rules.</li>
+                <li>Implemented comprehensive security layer with SSO integration using Ory ecosystem, managing authentication and authorization across multiple applications.</li>
+                <li>Contributed to CI/CD pipeline development using GitLab CI.</li>
             </ul>
         </div>
 
@@ -148,7 +151,6 @@
                 <li>Built robust transaction processing systems with retry logic and nonce management, achieving improved transaction reliability across multiple blockchain networks.</li>
                 <li>Designed and implemented agnostic blockchain operations involving smart contracts in Solidity and TypeScript, with a focus on secure multi-signature wallet functionalities.</li>
                 <li>Enhanced blockchain bridging infrastructure by developing verifier and guardian systems, implementing secure validation protocols for cross-chain operations.</li>
-                <li>Created comprehensive testing environments and deployment automation scripts, ensuring reliable smart contract deployments and updates.</li>
             </ul>
         </div>
 
@@ -156,10 +158,10 @@
             <div class="job-title">Freelance Software Engineer</div>
             <div class="company-info">idatase GmbH | January 2024 - March 2024 | Remote</div>
             <ul>
-                <li>Led development of scalable data aggregation API system for automated metrics collection.</li>
-                <li>Architected modular microservices solution using Python/Flask, PostgreSQL, and Docker.</li>
-                <li>Implemented comprehensive API authentication with JWT tokens.</li>
-                <li>Created automated CI/CD pipeline using GitHub Actions.</li>
+                <li>Developed scalable data ingestion pipeline using Python/Flask and PostgreSQL.</li>
+                <li>Implemented containerized microservices architecture using Docker Compose and Kubernetes.</li>
+                <li>Created automated testing and deployment pipeline using GitHub Actions.</li>
+                <li>Designed and implemented real-time metrics collection system.</li>
             </ul>
         </div>
     </div>
@@ -168,24 +170,28 @@
         <div class="section-title">Skills</div>
         <div class="skills-grid">
             <div class="skill-category">
-                <div class="skill-title">Systems Design & Architecture</div>
-                Scalable platform architecture, Microservices, Domain Driven Design, Event Driven architecture, Blockchain Architecture
+                <div class="skill-title">DevOps & Infrastructure</div>
+                Kubernetes, Docker, Ansible, GitHub Actions, GitLab CI, Helm, Bare Metal Infrastructure
             </div>
             <div class="skill-category">
-                <div class="skill-title">Programming Languages</div>
-                Go (Golang), Python, Scala, SQL, Solidity, TypeScript, JavaScript
+                <div class="skill-title">Monitoring & Observability</div>
+                Prometheus, Grafana, Elasticsearch, Graylog, Jaeger, OpenTelemetry, AlertManager
             </div>
             <div class="skill-category">
-                <div class="skill-title">Blockchain Technologies</div>
-                Smart Contracts, Web3.js, Ethers.js, OpenZeppelin, XRPL, EVM
+                <div class="skill-title">Data Engineering</div>
+                Apache Spark, Apache Kafka, Delta Lake, Apache Druid, PySpark, Apache Airflow, dbt
             </div>
             <div class="skill-category">
-                <div class="skill-title">Big Data Technologies</div>
-                Apache Spark, Apache Kafka, Apache Druid, Delta Lake, PySpark, Hive Metastore
+                <div class="skill-title">Databases & Caching</div>
+                PostgreSQL, TimescaleDB, Redis, DragonflyDB, Trino, Apache Cassandra
             </div>
             <div class="skill-category">
-                <div class="skill-title">DevOps & Deployment</div>
-                Kubernetes, Docker, Ansible, Git, GitHub Actions, GitLab, Hardhat
+                <div class="skill-title">Programming & Scripting</div>
+                Go (Golang), Python, Scala, Bash, SQL, Solidity, TypeScript
+            </div>
+            <div class="skill-category">
+                <div class="skill-title">Security & Compliance</div>
+                Cert-Manager, RBAC, OAuth2/OIDC, Ansible Vault
             </div>
         </div>
     </div>
@@ -196,21 +202,20 @@
             <span class="project-title">Mage-ai</span> - 
             <a href="https://github.com/mage-ai/mage-ai" class="project-link">Open Source</a>
             <br>
-            Contributed LDAP authentication, Apache Druid integration, and logger centralization features.
+            Implemented LDAP authentication, Apache Druid integration, and centralized logging system.
         </div>
         <div class="project-item">
             <span class="project-title">Go-mail</span> - 
             <a href="https://github.com/wneessen/go-mail/" class="project-link">Open Source</a>
             <br>
-            Contributed by adding the middleware concept and their tests and OpenPGP encryption middleware.
+            Developed middleware architecture pattern and implemented OpenPGP encryption middleware with comprehensive test coverage.
         </div>
-        <div class="project-item">
+                    <div class="project-item">
             <span class="project-title">Go-RTE</span> - 
             <a href="https://github.com/dhia-gharsallaoui/gorte" class="project-link">Open Source</a>
             <br>
-            A Go RTE API client enabling Go programs to interact with RTE APIs in a simple and uniform way.
+            Created a Go client library for RTE APIs with clean and uniform way to interact with different API endpoints.
         </div>
-
     </div>
 
     <div class="section">
@@ -218,12 +223,12 @@
         <div class="experience-item">
             <div class="job-title">Master's Degree in Computer Science</div>
             <div class="company-info">MINES ParisTech | 2020 - 2021</div>
-            <div class="company-info">Minor in Mathematics</div>
+            <div class="company-info">Minor in Mathematics | Focus on Distributed Systems and Cloud Computing</div>
         </div>
         <div class="experience-item">
             <div class="job-title">Engineer's Degree in Industrial Engineering</div>
             <div class="company-info">ENIT | 2018 - 2021</div>
-            <div class="company-info">Minor in Data Science</div>
+            <div class="company-info">Minor in Data Science | Specialization in Big Data Analytics</div>
         </div>
     </div>
 </body>
