--- a/public/assets/resume-fr.html
+++ b/public/assets/resume-fr.html
@@ -119,7 +119,7 @@
 
     <div class="section">
         <div class="section-title">Résumé</div>
-        <p>Architecte de Plateformes Distribuées avec 3 ans d'expérience en conception et développement de solutions cloud-native. Expert en microservices, infrastructure Kubernetes, et data engineering (Apache Spark, Delta Lake, Kafka). Expérience approfondie en infrastructure automation et observability systems. Contributeur actif aux projets open-source.</p>
+        <p>Distributed Platform Architect avec plus de 3 ans d'expérience dans la conception et l'implémentation de solutions cloud-native. Expert en microservices architecture, Kubernetes infrastructure et real-time data processing platforms. Spécialisé dans le développement de high-performance systems utilisant des technologies modernes incluant Golang, Apache Spark et blockchain protocols. Fort accent sur les DevOps practices, infrastructure automation et system observability. Active contributor aux projets open-source avec un track record prouvé dans la delivery de solutions techniques complexes.</p>
     </div>
 
     <div class="section">
@@ -129,16 +129,15 @@
             <div class="job-title">Architecte Solutions</div>
             <div class="company-info">Skilld | Février 2022 - Présent | Paris, France</div>
             <ul>
-                <li>Conception et développement de microservices scalable avec Golang, implémentant les principes du domain-driven design.</li>
-                <li>Conception et maintenance d'une infrastructure Kubernetes multi-cluster couvrant les environnements de développement, staging et production, implémentation de helm charts pour le déploiement automatisé des applications.</li>
-                <li>Mise en place d'une stack de monitoring et d'observabilité robuste utilisant Prometheus, Grafana, et Elasticsearch, création de tableaux de bord personnalisés et d'alertes pour un suivi système complet.</li>
-                <li>Implémentation d'un système de traçage distribué utilisant OpenTelemetry (OTEL) pour une observability de bout en bout des microservices, améliorant les capacités de dépannage et l'optimisation des performances.</li>
-                <li>Développement et optimisation de pipelines de traitement de flux utilisant Apache Spark et Delta Lake, réalisant un traitement des données quasi temps réel avec des contrôles de qualité des données.</li>
-                <li>Contribution à l'automatisation de l'infrastructure sur des serveurs bare metal utilisant Ansible, supportant la configuration et le déploiement d'applications distribuées.</li>
-                <li>Conception et déploiement d'une architecture event-driven évolutive utilisant Apache Kafka, NATS, et Redis, permettant un traitement d'événements en temps réel avec une latence inférieure à la seconde.</li>
-                <li>Contribution à l'architecture de logging centralisée utilisant Graylog et Elasticsearch avec des règles personnalisées de parsing et d'alerting.</li>
-                <li>Implémentation d'une couche de sécurité complète avec intégration SSO utilisant l'écosystème Ory, gérant l'authentification et l'autorisation à travers plusieurs applications.</li>
-                <li>Contribution au développement de pipeline CI/CD utilisant GitLab CI.</li>
+                <li>Conception et développement de microservices scalable avec Golang, implémentant les principes du domain-driven design et clean architecture patterns pour des systèmes distribués haute performance.</li>
+                <li>Architecture et implémentation d'une infrastructure Kubernetes multi-cluster avec observability stack complète utilisant Prometheus, Grafana et OpenTelemetry, permettant une end-to-end visibility et real-time monitoring capabilities.</li>
+                <li>Conception et implémentation d'un système SSO entreprise utilisant l'écosystème Ory (Kratos, Hydra, Oathkeeper), supportant plusieurs fournisseurs d'authentification (Google, GitHub, GitLab, LinkedIn) et RBAC granulaire.</li>
+                <li>Développement de high-performance data processing pipelines avec Apache Spark et Delta Lake, implémentant des data quality checks complets et real-time analytics avec Apache Druid integration.</li>
+                <li>Construction d'une architecture event-driven scalable utilisant Apache Kafka, NATS et Redis, permettant un real-time event processing avec sub-second latency et auto-scaling.</li>
+                <li>Développement et maintenance de l'automatisation d'infrastructure sur serveurs bare metal utilisant Ansible, implémentant des pipelines GitLab CI pour le déploiement continu et les tests.</li>
+                <li>Création et optimisation d'une architecture de logging centralisée utilisant Graylog et Elasticsearch, implémentant des règles de parsing personnalisées et mécanismes d'alerting.</li>
+                <li>Intégration de Hive Metastore et implémentation d'une gestion complète du catalogue de données, améliorant la découverte et la gouvernance des données.</li>
+                <li>Conception et implémentation d'une infrastructure PKI avec gestion et renouvellement automatisé des certificats.</li>
             </ul>
         </div>
 
@@ -146,11 +145,10 @@
             <div class="job-title">Développeur Blockchain Freelance</div>
             <div class="company-info">ChainsAtlas | Mars 2024 - Présent</div>
             <ul>
-                <li>Développement et optimisation de protocoles de bridge multi-chain intégrant les chaînes compatibles EVM avec XRPL, implémentant des transferts d'actifs cross-chain sécurisés et des opérations NFT pour une meilleure interopérabilité.</li>
-                <li>Architecture et implémentation de systèmes de récompenses de bataille avec validation multi-signature pour le gaming blockchain, incorporant des mécanismes de distribution de récompenses XRP et NFT.</li>
-                <li>Construction de systèmes de traitement de transactions robustes avec logique de retry et gestion des nonces, atteignant une meilleure fiabilité des transactions à travers plusieurs réseaux blockchain.</li>
-                <li>Conception et implémentation d'opérations blockchain agnostiques impliquant des smart contracts en Solidity et TypeScript, avec un focus sur les fonctionnalités de wallet multi-signature sécurisées.</li>
-                <li>Amélioration de l'infrastructure de bridging blockchain en développant des systèmes de vérification et de gardiennage, implémentant des protocoles de validation sécurisés pour les opérations cross-chain.</li>
+                <li>Développement et optimisation de protocoles de bridge multi-chain intégrant les chaînes compatibles EVM avec XRPL, implémentant des transferts d'actifs cross-chain sécurisés et des opérations NFT avec traitement robuste des transactions.</li>
+                <li>Construction de systèmes de récompenses de jeux blockchain avec validation multi-signature, incorporant une logique sophistiquée de retry et gestion des nonces pour une meilleure fiabilité des transactions.</li>
+                <li>Création de systèmes de vérification et de gardiennage pour les opérations cross-chain sécurisées, implémentant des protocoles de sécurité complets et du monitoring.</li>
+                <li>Conception et implémentation d'opérations blockchain agnostiques utilisant Solidity et TypeScript, avec focus sur les fonctionnalités de wallet multi-signature sécurisées.</li>
             </ul>
         </div>
 
@@ -158,11 +156,32 @@
             <div class="job-title">Ingénieur Logiciel Freelance</div>
             <div class="company-info">idatase GmbH | Janvier 2024 - Mars 2024 | Télétravail</div>
             <ul>
-                <li>Développement de pipeline d'ingestion de données évolutif utilisant Python/Flask et PostgreSQL.</li>
-                <li>Implémentation d'architecture microservices containerisée utilisant Docker Compose et Kubernetes.</li>
-                <li>Création de pipeline de test et déploiement automatisé utilisant GitHub Actions.</li>
-                <li>Conception et implémentation d'un système de collecte de métriques en temps réel.</li>
+                <li>Développement de data ingestion pipeline scalable utilisant Python/Flask et PostgreSQL, implémentant un monitoring complet et gestion des erreurs.</li>
+                <li>Implémentation d'architecture microservices containerisée utilisant Docker Compose et Kubernetes, avec pipelines de déploiement automatisés.</li>
+                <li>Conception et implémentation d'un système de collecte de métriques en temps réel avec tableaux de bord personnalisés et règles d'alerte.</li>
             </ul>
+        </div>
+    </div>
+
+    <div class="section">
+        <div class="section-title">Contributions Open Source</div>
+        <div class="project-item">
+            <span class="project-title">Mage-ai</span> - 
+            <a href="https://github.com/mage-ai/mage-ai" class="project-link">Open Source</a>
+            <br>
+            Dirigé l'implémentation du système d'authentification LDAP et l'intégration Apache Druid, améliorant la sécurité entreprise et les capacités analytiques. Développement d'un système de logging centralisé avec monitoring complet.
+        </div>
+        <div class="project-item">
+            <span class="project-title">Go-mail</span> - 
+            <a href="https://github.com/wneessen/go-mail/" class="project-link">Open Source</a>
+            <br>
+            Architecture du pattern middleware et implémentation du chiffrement OpenPGP avec couverture de tests complète, améliorant la sécurité et la maintenabilité des emails.
+        </div>
+        <div class="project-item">
+            <span class="project-title">Go-RTE</span> - 
+            <a href="https://github.com/dhia-gharsallaoui/gorte" class="project-link">Open Source</a>
+            <br>
+            Création d'une bibliothèque client Go pour les APIs RTE avec patterns d'interaction propres et uniformes, facilitant l'intégration avec les systèmes de gestion d'énergie.
         </div>
     </div>
 
@@ -170,51 +189,29 @@
         <div class="section-title">Compétences</div>
         <div class="skills-grid">
             <div class="skill-category">
-                <div class="skill-title">DevOps & Infrastructure</div>
-                Kubernetes, Docker, Ansible, GitHub Actions, GitLab CI, Helm, Bare Metal Infrastructure
+                <div class="skill-title">Cloud & Infrastructure</div>
+                Kubernetes, Docker, Ansible, GitLab CI, Helm, Infrastructure Bare Metal, Gestion Multi-cluster
             </div>
             <div class="skill-category">
-                <div class="skill-title">Monitoring & Observabilité</div>
-                Prometheus, Grafana, Elasticsearch, Graylog, Jaeger, OpenTelemetry, AlertManager
+                <div class="skill-title">Observabilité & Monitoring</div>
+                Prometheus, Grafana, Elasticsearch, OpenTelemetry, Graylog, Jaeger, AlertManager
             </div>
             <div class="skill-category">
                 <div class="skill-title">Ingénierie des Données</div>
-                Apache Spark, Apache Kafka, Delta Lake, Apache Druid, PySpark, Apache Airflow, dbt
+                Apache Spark, Apache Kafka, Delta Lake, Apache Druid, PySpark, Apache Airflow, Hive Metastore
             </div>
             <div class="skill-category">
                 <div class="skill-title">Bases de Données & Cache</div>
                 PostgreSQL, TimescaleDB, Redis, DragonflyDB, Trino, Apache Cassandra
             </div>
             <div class="skill-category">
-                <div class="skill-title">Programmation & Scripting</div>
-                Go (Golang), Python, Scala, Bash, SQL, Solidity, TypeScript
+                <div class="skill-title">Programmation & Blockchain</div>
+                Go (Golang), Python, Scala, Solidity, TypeScript, Smart Contracts, Protocoles Cross-chain
             </div>
             <div class="skill-category">
-                <div class="skill-title">Sécurité & Conformité</div>
-                Cert-Manager, RBAC, OAuth2/OIDC, Ansible Vault
+                <div class="skill-title">Sécurité & Authentification</div>
+                Écosystème Ory, RBAC, OAuth2/OIDC, PKI, Gestion des Certificats, Authentification Multi-facteur
             </div>
-        </div>
-    </div>
-
-    <div class="section">
-        <div class="section-title">Projets</div>
-        <div class="project-item">
-            <span class="project-title">Mage-ai</span> - 
-            <a href="https://github.com/mage-ai/mage-ai" class="project-link">Open Source</a>
-            <br>
-            Implémentation de l'authentification LDAP, intégration Apache Druid, et système de logging centralisé.
-        </div>
-        <div class="project-item">
-            <span class="project-title">Go-mail</span> - 
-            <a href="https://github.com/wneessen/go-mail/" class="project-link">Open Source</a>
-            <br>
-            Développement du pattern d'architecture middleware et implémentation du middleware de chiffrement OpenPGP avec couverture de tests complète.
-        </div>
-        <div class="project-item">
-            <span class="project-title">Go-RTE</span> - 
-            <a href="https://github.com/dhia-gharsallaoui/gorte" class="project-link">Open Source</a>
-            <br>
-            Création d'une bibliothèque client Go pour les APIs RTE avec une façon propre et uniforme d'interagir avec différents endpoints API.
         </div>
     </div>
 
