--- a/public/assets/resume.html
+++ b/public/assets/resume.html
@@ -119,7 +119,7 @@
 
     <div class="section">
         <div class="section-title">Summary</div>
-        <p>Distributed Platform Architect with 3 years of experience, combining architectural design with hands-on implementation. Architect and develop cloud-native solutions including microservices, Kubernetes infrastructure, and distributed data processing platforms. Specialized in building real-time data pipelines using Apache Spark, Delta Lake, and event streaming with Apache Kafka. Design and implement blockchain protocols and cross-chain bridges. Strong focus on end-to-end delivery, from system design to production deployment, with expertise in infrastructure automation and observability. Active contributor to open-source projects in data engineering and system integration.</p>
+        <p>Distributed Platform Architect with 3+ years of experience in designing and implementing cloud-native solutions. Expert in building scalable microservices architectures, Kubernetes infrastructure, and real-time data processing platforms. Specialized in developing secure, high-performance systems using modern technologies including Golang, Apache Spark, and blockchain protocols. Strong focus on DevOps practices, infrastructure automation, and system observability. Active contributor to open-source projects with a proven track record of delivering complex technical solutions.</p>
     </div>
 
     <div class="section">
@@ -129,16 +129,15 @@
             <div class="job-title">Solution Architect</div>
             <div class="company-info">Skilld | February 2022 - Present | Paris, France</div>
             <ul>
-                <li>Designed and developed scalable microservices using Golang, implementing domain-driven design principles.</li>
-                <li>Designed and maintained a multi-cluster Kubernetes infrastructure spanning development, staging, and production environments, implementing helm charts for automated application deployment.</li>
-                <li>Engineered a robust monitoring and observability stack using Prometheus, Grafana, and Elasticsearch, creating custom dashboards and alerts for comprehensive system monitoring.</li>
-                <li>Implemented distributed tracing system using OpenTelemetry (OTEL) for end-to-end visibility across microservices, improving troubleshooting capabilities and performance optimization.</li>
-                <li>Developed and optimized stream processing pipelines using Apache Spark and Delta Lake, achieving near real-time data processing with implemented data quality checks.</li>
-                <li>Contributed to infrastructure automation on bare metal servers using Ansible, supporting configuration and deployment of distributed applications.</li>
-                <li>Designed and deployed a scalable event-driven architecture using Apache Kafka, NATS, and Redis, enabling real-time event processing with sub-second latency.</li>
-                <li>Contributed to centralized logging architecture using Graylog and Elasticsearch with custom parsing and alerting rules.</li>
-                <li>Implemented comprehensive security layer with SSO integration using Ory ecosystem, managing authentication and authorization across multiple applications.</li>
-                <li>Contributed to CI/CD pipeline development using GitLab CI.</li>
+                <li>Designed and developed scalable microservices using Golang, implementing domain-driven design principles and clean architecture patterns for high-performance distributed systems.</li>
+                <li>Architected and implemented a multi-cluster Kubernetes infrastructure with comprehensive observability stack using Prometheus, Grafana, and OpenTelemetry, achieving end-to-end visibility and sub-second monitoring capabilities.</li>
+                <li>Designed and implemented enterprise-wide SSO using Ory ecosystem (Kratos, Hydra, Oathkeeper), supporting multiple authentication providers (Google, GitHub, GitLab, LinkedIn) and fine-grained RBAC.</li>
+                <li>Engineered high-performance data processing pipelines using Apache Spark and Delta Lake, implementing comprehensive data quality checks and real-time analytics with Apache Druid integration.</li>
+                <li>Built scalable event-driven architecture using Apache Kafka, NATS, and Redis, enabling real-time event processing with sub-second latency and automated scaling capabilities.</li>
+                <li>Developed and maintained infrastructure automation on bare metal servers using Ansible, implementing GitLab CI pipelines for continuous deployment and testing.</li>
+                <li>Created and optimized centralized logging architecture using Graylog and Elasticsearch, implementing custom parsing rules and alerting mechanisms.</li>
+                <li>Integrated Hive Metastore and implemented comprehensive data catalog management, improving data discovery and governance.</li>
+                <li>Designed and implemented PKI infrastructure with automated certificate management and renewal systems.</li>
             </ul>
         </div>
 
@@ -146,11 +145,10 @@
             <div class="job-title">Freelance Blockchain Developer</div>
             <div class="company-info">ChainsAtlas | March 2024 - Present</div>
             <ul>
-                <li>Developed and optimized multi-chain bridge protocols integrating EVM-compatible chains with XRPL, implementing secure cross-chain asset transfers and NFT operations for enhanced interoperability.</li>
-                <li>Architected and implemented battle reward systems with multi-signature validation for blockchain gaming, incorporating XRP and NFT reward distribution mechanisms.</li>
-                <li>Built robust transaction processing systems with retry logic and nonce management, achieving improved transaction reliability across multiple blockchain networks.</li>
-                <li>Designed and implemented agnostic blockchain operations involving smart contracts in Solidity and TypeScript, with a focus on secure multi-signature wallet functionalities.</li>
-                <li>Enhanced blockchain bridging infrastructure by developing verifier and guardian systems, implementing secure validation protocols for cross-chain operations.</li>
+                <li>Developed and optimized multi-chain bridge protocols integrating EVM-compatible chains with XRPL, implementing secure cross-chain asset transfers and NFT operations with robust transaction processing.</li>
+                <li>Built blockchain gaming reward systems with multi-signature validation, incorporating sophisticated retry logic and nonce management for improved transaction reliability.</li>
+                <li>Created verifier and guardian systems for secure cross-chain operations, implementing comprehensive security protocols and monitoring.</li>
+                <li>Designed and implemented agnostic blockchain operations using Solidity and TypeScript, focusing on secure multi-signature wallet functionalities.</li>
             </ul>
         </div>
 
@@ -158,11 +156,32 @@
             <div class="job-title">Freelance Software Engineer</div>
             <div class="company-info">idatase GmbH | January 2024 - March 2024 | Remote</div>
             <ul>
-                <li>Developed scalable data ingestion pipeline using Python/Flask and PostgreSQL.</li>
-                <li>Implemented containerized microservices architecture using Docker Compose and Kubernetes.</li>
-                <li>Created automated testing and deployment pipeline using GitHub Actions.</li>
-                <li>Designed and implemented real-time metrics collection system.</li>
+                <li>Developed scalable data ingestion pipeline using Python/Flask and PostgreSQL, implementing comprehensive monitoring and error handling.</li>
+                <li>Implemented containerized microservices architecture using Docker Compose and Kubernetes, with automated deployment pipelines.</li>
+                <li>Designed and implemented real-time metrics collection system with custom dashboards and alerting rules.</li>
             </ul>
+        </div>
+    </div>
+
+    <div class="section">
+        <div class="section-title">Open Source Contributions</div>
+        <div class="project-item">
+            <span class="project-title">Mage-ai</span> - 
+            <a href="https://github.com/mage-ai/mage-ai" class="project-link">Open Source</a>
+            <br>
+            Led the implementation of LDAP authentication system and Apache Druid integration, enhancing enterprise security and analytics capabilities. Developed centralized logging system with comprehensive monitoring.
+        </div>
+        <div class="project-item">
+            <span class="project-title">Go-mail</span> - 
+            <a href="https://github.com/wneessen/go-mail/" class="project-link">Open Source</a>
+            <br>
+            Architected middleware pattern and implemented OpenPGP encryption with comprehensive test coverage, improving email security and maintainability.
+        </div>
+        <div class="project-item">
+            <span class="project-title">Go-RTE</span> - 
+            <a href="https://github.com/dhia-gharsallaoui/gorte" class="project-link">Open Source</a>
+            <br>
+            Created a Go client library for RTE APIs with clean and uniform interaction patterns, facilitating integration with energy management systems.
         </div>
     </div>
 
@@ -170,51 +189,29 @@
         <div class="section-title">Skills</div>
         <div class="skills-grid">
             <div class="skill-category">
-                <div class="skill-title">DevOps & Infrastructure</div>
-                Kubernetes, Docker, Ansible, GitHub Actions, GitLab CI, Helm, Bare Metal Infrastructure
+                <div class="skill-title">Cloud & Infrastructure</div>
+                Kubernetes, Docker, Ansible, GitLab CI, Helm, Bare Metal Infrastructure, Multi-cluster Management
             </div>
             <div class="skill-category">
-                <div class="skill-title">Monitoring & Observability</div>
-                Prometheus, Grafana, Elasticsearch, Graylog, Jaeger, OpenTelemetry, AlertManager
+                <div class="skill-title">Observability & Monitoring</div>
+                Prometheus, Grafana, Elasticsearch, OpenTelemetry, Graylog, Jaeger, AlertManager
             </div>
             <div class="skill-category">
                 <div class="skill-title">Data Engineering</div>
-                Apache Spark, Apache Kafka, Delta Lake, Apache Druid, PySpark, Apache Airflow, dbt
+                Apache Spark, Apache Kafka, Delta Lake, Apache Druid, PySpark, Apache Airflow, Hive Metastore
             </div>
             <div class="skill-category">
                 <div class="skill-title">Databases & Caching</div>
                 PostgreSQL, TimescaleDB, Redis, DragonflyDB, Trino, Apache Cassandra
             </div>
             <div class="skill-category">
-                <div class="skill-title">Programming & Scripting</div>
-                Go (Golang), Python, Scala, Bash, SQL, Solidity, TypeScript
+                <div class="skill-title">Programming & Blockchain</div>
+                Go (Golang), Python, Scala, Solidity, TypeScript, Smart Contracts, Cross-chain Protocols
             </div>
             <div class="skill-category">
-                <div class="skill-title">Security & Compliance</div>
-                Cert-Manager, RBAC, OAuth2/OIDC, Ansible Vault
+                <div class="skill-title">Security & Authentication</div>
+                Ory Ecosystem, RBAC, OAuth2/OIDC, PKI, Certificate Management, Multi-factor Authentication
             </div>
-        </div>
-    </div>
-
-    <div class="section">
-        <div class="section-title">Projects</div>
-        <div class="project-item">
-            <span class="project-title">Mage-ai</span> - 
-            <a href="https://github.com/mage-ai/mage-ai" class="project-link">Open Source</a>
-            <br>
-            Implemented LDAP authentication, Apache Druid integration, and centralized logging system.
-        </div>
-        <div class="project-item">
-            <span class="project-title">Go-mail</span> - 
-            <a href="https://github.com/wneessen/go-mail/" class="project-link">Open Source</a>
-            <br>
-            Developed middleware architecture pattern and implemented OpenPGP encryption middleware with comprehensive test coverage.
-        </div>
-                    <div class="project-item">
-            <span class="project-title">Go-RTE</span> - 
-            <a href="https://github.com/dhia-gharsallaoui/gorte" class="project-link">Open Source</a>
-            <br>
-            Created a Go client library for RTE APIs with clean and uniform way to interact with different API endpoints.
         </div>
     </div>
 
