--- a/public/assets/resume-fr.html
+++ b/public/assets/resume-fr.html
@@ -142,9 +142,10 @@
         </div>
 
         <div class="experience-item">
-            <div class="job-title">Développeur Blockchain Freelance</div>
+            <div class="job-title">Advisor Blockchain</div>
             <div class="company-info">ChainsAtlas | Mars 2024 - Présent</div>
             <ul>
+                <li>Implémenté des services backend en Golang pour interagir avec des smart contracts EVM (ERC-20, ERC-721)</li>
                 <li>Développement et optimisation de protocoles de bridge multi-chain intégrant les chaînes compatibles EVM avec XRPL, implémentant des transferts d'actifs cross-chain sécurisés et des opérations NFT avec traitement robuste des transactions.</li>
                 <li>Construction de systèmes de récompenses de jeux blockchain avec validation multi-signature, incorporant une logique sophistiquée de retry et gestion des nonces pour une meilleure fiabilité des transactions.</li>
                 <li>Création de systèmes de vérification et de gardiennage pour les opérations cross-chain sécurisées, implémentant des protocoles de sécurité complets et du monitoring.</li>
