--- a/public/assets/resume.html
+++ b/public/assets/resume.html
@@ -129,6 +129,7 @@
             <div class="job-title">Solution Architect</div>
             <div class="company-info">Skilld | February 2022 - Present | Paris, France</div>
             <ul>
+                <li>Conçu et développé des microservices haute performance en Golang</li>
                 <li>Designed and developed scalable microservices using Golang, implementing domain-driven design principles and clean architecture patterns for high-performance distributed systems.</li>
                 <li>Architected and implemented a multi-cluster Kubernetes infrastructure with comprehensive observability stack using Prometheus, Grafana, and OpenTelemetry, achieving end-to-end visibility and sub-second monitoring capabilities.</li>
                 <li>Designed and implemented enterprise-wide SSO using Ory ecosystem (Kratos, Hydra, Oathkeeper), supporting multiple authentication providers (Google, GitHub, GitLab, LinkedIn) and fine-grained RBAC.</li>
@@ -145,6 +146,7 @@
             <div class="job-title">Freelance Blockchain Developer</div>
             <div class="company-info">ChainsAtlas | March 2024 - Present</div>
             <ul>
+                <li>Implémenté des services backend en Golang pour interagir avec des smart contracts EVM (ERC-20, ERC-721)</li>
                 <li>Developed and optimized multi-chain bridge protocols integrating EVM-compatible chains with XRPL, implementing secure cross-chain asset transfers and NFT operations with robust transaction processing.</li>
                 <li>Built blockchain gaming reward systems with multi-signature validation, incorporating sophisticated retry logic and nonce management for improved transaction reliability.</li>
                 <li>Created verifier and guardian systems for secure cross-chain operations, implementing comprehensive security protocols and monitoring.</li>
